# api-rust

./: .gitignore  Cargo.toml  endpoints.url
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/endpoints/: attendance.rs  events.rs  locations.rs  mod.rs  news.rs
src/endpoints/auth/: README.md  login.rs
src/endpoints/calendar/: events.rs  eventsbyuser.rs  mod.rs
src/endpoints/user/: staff.rs
src/utils/: consts.rs
