[package]
name = "compassapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
reqwest = {version = "0.11.24", features = ["json","cookies"]}
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
